fixing spacing in _forms.scss

--- a/app/assets/stylesheets/application/_forms.scss
+++ b/app/assets/stylesheets/application/_forms.scss
@@ -1,7 +1,7 @@
 form {
   background: $gray-dark;
   padding: 2rem;
-  margin:0 auto;
+  margin: 0 auto;
 
   label {
     font-size: 1rem;
@@ -11,12 +11,11 @@ form {
 
   input[type=text],
   input[type=email],
-  textarea
-  {
+  textarea {
     border: none;
     color: $charcoal;
     font-weight: 300;
-    padding: .5rem;
+    padding: 0.5rem;
     width: 100%;
 
     &::placeholder {
@@ -25,10 +24,10 @@ form {
 
   }
 
-  input[type=file]{
+  input[type=file] {
     appearance: none;
     color: $charcoal;
-    font-size: .8rem;
+    font-size: 0.8rem;
     text-transform: uppercase;
   }
 }
@@ -79,7 +78,7 @@ a.button {
   position: absolute;
   top: 0;
   left: 0;
-  transition:background-color 0.1s linear;
+  transition: background-color 0.1s linear;
 }
 /* checked mark aspect changes */
 [type="checkbox"]:not(:checked) + label:after {
@@ -106,16 +105,16 @@ a.button {
 
 // radio buttons
 input[type="radio"] {
-  display:none;
+  display: none;
 }
 
 input[type="radio"] + label span {
-  display:inline-block;
-  width:19px;
-  height:19px;
-  margin:-1px 4px 0 0;
-  vertical-align:middle;
-  cursor:pointer;
+  display: inline-block;
+  width: 19px;
+  height: 19px;
+  margin: -1px 4px 0 0;
+  vertical-align: middle;
+  cursor: pointer;
   border-radius:  50%;
 }
 
@@ -123,14 +122,14 @@ input[type="radio"] + label span {
   background-color: white;
 }
 
-input[type="radio"]:checked + label span{
+input[type="radio"]:checked + label span {
   background: $charcoal;
   border: 4px solid #fff;
 }
 
 input[type="radio"] + label span,
 input[type="radio"]:checked + label span {
-  transition:background-color 0.1s linear;
+  transition: background-color 0.1s linear;
 }
 
 // Selectmenu
